--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.9.2",
     "material-icons": "^1.11.5",
     "npm-force-resolutions": "^0.0.10",
     "react": "^18.2.0",
